# Ray-Trace

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
configs/addons/RayTrace/: gamedata.json
configs/addons/metamod/: RayTrace.vdf
docker/: Build Project in Docker.txt  Dockerfile  docker-compose.yml  docker-entrypoint.sh  setup-sdk.sh
makefiles/: linux.base.cmake  protobuf.cmake  windows.base.cmake
managed/RayTrace/RayTraceApi/: RayTraceApi.cs
managed/RayTrace/RayTraceImpl/: RayTraceImpl.cs
public/: CRayTraceInterface.h  RayTrace.cs  craytraceinterface.h
src/: Plugin.cpp  Plugin.h  RayTrace.cpp  RayTrace.h  gameconfig.cpp  path.h  plugin.cpp  plugin.h  raytrace.cpp  raytrace.h  shared.cpp  shared.h
src/listeners/: Listeners.cpp  listeners.cpp  listeners.h
src/schema/: CBaseEntity.h  CTimer.cpp  CTimer.h  cgameresourceserviceserver.h  services.h
